--- a/dive/.godot/editor/editor_layout.cfg
+++ b/dive/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Items/coin.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Items/")
+dock_filesystem_selected_paths=PackedStringArray("res://TODO.txt")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,16 +26,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Levels/world.tscn", "res://Levels/player.tscn", "res://Items/lift_collumn.tscn", "res://Items/coin.tscn")
-current_scene="res://Levels/player.tscn"
+current_scene="res://Levels/world.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Items/coin.gd", "res://Items/lift_collumn.gd", "res://Levels/world.gd"]
-selected_script=""
+open_scripts=["res://Items/coin.gd", "res://Items/lift_collumn.gd", "res://TODO.txt", "res://Levels/world.gd"]
+selected_script="res://TODO.txt"
 open_help=["@GDScript", "AnimationPlayer", "Input"]
 script_split_offset=70
 list_split_offset=0
