--- a/dive/.godot/editor/script_editor_cache.cfg
+++ b/dive/.godot/editor/script_editor_cache.cfg
@@ -39,3 +39,17 @@ state={
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
+
+[res://TODO.txt]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 27,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
+}
