--- a/dive/.godot/editor/editor_layout.cfg
+++ b/dive/.godot/editor/editor_layout.cfg
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://TODO.txt")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Items/Sea Mines/mine_explosion.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Items/", "res://Items/Sea Mines/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/world.tscn", "res://Levels/player.tscn", "res://Items/lift_collumn.tscn", "res://Items/coin.tscn")
-current_scene="res://Levels/world.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://Levels/player.tscn", "res://Levels/world.tscn", "res://Items/Sea Mines/mine_explosion.tscn")
+current_scene="res://Items/Sea Mines/mine_explosion.tscn"
+center_split_offset=-302
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Items/coin.gd", "res://Items/lift_collumn.gd", "res://TODO.txt", "res://Levels/world.gd"]
-selected_script="res://TODO.txt"
-open_help=["@GDScript", "AnimationPlayer", "Input"]
+open_scripts=["res://Items/coin.gd", "res://Items/lift_collumn.gd", "res://Items/Sea Mines/mine.gd", "res://Items/Sea Mines/mine_explosion.gd", "res://Items/Sea Mines/sea_mine.gd", "res://Items/teleporter.gd", "res://TODO.txt", "res://Levels/world.gd"]
+selected_script="res://Items/Sea Mines/mine.gd"
+open_help=["@GDScript", "AnimationPlayer", "Area2D", "CanvasItem", "Input", "KinematicCollision2D", "Node2D", "PhysicsBody2D", "SceneTree"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
