--- a/dive/.godot/editor/editor_layout.cfg
+++ b/dive/.godot/editor/editor_layout.cfg
@@ -6,39 +6,39 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
+dock_split_2=58
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-295
+dock_hsplit_2=553
+dock_hsplit_3=-432
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Items/Sea Mines/mine_explosion.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Items/", "res://Items/Sea Mines/")
+dock_filesystem_selected_paths=PackedStringArray("res://UI/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Player/", "res://Levels/", "res://Items/", "res://Items/Sea Mines/", "res://Components/", "res://Characters/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/player.tscn", "res://Levels/world.tscn", "res://Items/Sea Mines/mine_explosion.tscn")
-current_scene="res://Items/Sea Mines/mine_explosion.tscn"
-center_split_offset=-302
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray("res://Player/player.tscn", "res://Levels/world.tscn", "res://Items/Sea Mines/mine_explosion.tscn", "res://Components/hitbox.tscn", "res://Characters/enemy.tscn", "res://Items/Sea Mines/sea_mine.tscn")
+current_scene="res://Player/player.tscn"
+center_split_offset=-491
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Items/coin.gd", "res://Items/lift_collumn.gd", "res://Items/Sea Mines/mine.gd", "res://Items/Sea Mines/mine_explosion.gd", "res://Items/Sea Mines/sea_mine.gd", "res://Items/teleporter.gd", "res://TODO.txt", "res://Levels/world.gd"]
-selected_script="res://Items/Sea Mines/mine.gd"
+open_scripts=["res://Items/coin.gd", "res://Characters/enemy.gd", "res://Components/hitbox.gd", "res://Items/lift_collumn.gd", "res://Items/Sea Mines/mine.gd", "res://Items/Sea Mines/mine_explosion.gd", "res://Items/Sea Mines/sea_mine.gd", "res://Items/teleporter.gd", "res://TODO.txt", "res://Levels/world.gd"]
+selected_script="res://Items/teleporter.gd"
 open_help=["@GDScript", "AnimationPlayer", "Area2D", "CanvasItem", "Input", "KinematicCollision2D", "Node2D", "PhysicsBody2D", "SceneTree"]
-script_split_offset=70
-list_split_offset=0
+script_split_offset=330
+list_split_offset=221
 zoom_factor=1.0
 
 [ShaderEditor]
