--- a/dive/.godot/editor/script_editor_cache.cfg
+++ b/dive/.godot/editor/script_editor_cache.cfg
@@ -59,10 +59,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -73,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 75,
-"scroll_position": 54.0,
+"row": 58,
+"scroll_position": 49.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -114,13 +114,17 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(8),
-"column": 24,
+"breakpoints": PackedInt32Array(),
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 8,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 8,
+"selection_to_column": 0,
+"selection_to_line": 13,
 "syntax_highlighter": "GDScript"
 }
 
@@ -133,7 +137,21 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 32,
-"scroll_position": 24.0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Items/pearl.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
