--- a/dive/.godot/editor/editor_layout.cfg
+++ b/dive/.godot/editor/editor_layout.cfg
@@ -17,25 +17,24 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Components/hitbox.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Player/", "res://Levels/", "res://Components/")
+dock_filesystem_selected_paths=PackedStringArray("res://Items/Sea Mines/sea_mine.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Player/", "res://Items/", "res://Items/Sea Mines/", "res://Components/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/world.tscn")
-current_scene="res://Levels/world.tscn"
+open_scenes=PackedStringArray("res://Levels/world.tscn", "res://Levels/mine_level.tscn", "res://Items/lift_collumn.tscn", "res://Items/Sea Mines/sea_mine.tscn")
+current_scene="res://Items/lift_collumn.tscn"
 center_split_offset=-575
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Components/hitbox.gd", "res://Items/Sea Mines/mine.gd", "res://Items/Sea Mines/sea_mine.gd", "res://Items/teleporter.gd", "res://Levels/world.gd"]
-selected_script="res://Components/hitbox.gd"
+open_scripts=["res://Components/hitbox.gd", "res://Items/lift_collumn.gd", "res://Items/Sea Mines/mine.gd", "res://Items/Sea Mines/sea_mine.gd", "res://Items/teleporter.gd", "res://Levels/world.gd"]
+selected_script="res://Items/lift_collumn.gd"
 open_help=[]
 script_split_offset=330
 list_split_offset=221
