--- a/dive/.godot/editor/editor_layout.cfg
+++ b/dive/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_closed=[]
 dock_split_2=-142
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=553
-dock_hsplit_3=-502
+dock_hsplit_2=313
+dock_hsplit_3=-327
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -25,18 +25,19 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/world.tscn", "res://Levels/mine_level.tscn", "res://Items/lift_collumn.tscn", "res://Items/Sea Mines/sea_mine.tscn")
-current_scene="res://Items/lift_collumn.tscn"
-center_split_offset=-575
+open_scenes=PackedStringArray("res://Levels/world.tscn", "res://Levels/mine_level.tscn", "res://Items/lift_collumn.tscn", "res://Items/Sea Mines/sea_mine.tscn", "res://Items/background_fish.tscn")
+current_scene="res://Items/background_fish.tscn"
+center_split_offset=-344
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://Components/hitbox.gd", "res://Items/lift_collumn.gd", "res://Items/Sea Mines/mine.gd", "res://Items/Sea Mines/sea_mine.gd", "res://Items/teleporter.gd", "res://Levels/world.gd"]
-selected_script="res://Items/lift_collumn.gd"
-open_help=[]
-script_split_offset=330
+open_scripts=["res://Items/background_fish.gd", "res://Components/hitbox.gd", "res://Items/lift_collumn.gd", "res://Items/Sea Mines/mine.gd", "res://Items/Sea Mines/sea_mine.gd", "res://Items/teleporter.gd", "res://Levels/world.gd"]
+selected_script="res://Items/background_fish.gd"
+open_help=["@GlobalScope", "CollisionShape2D", "Shape2D"]
+script_split_offset=184
 list_split_offset=221
 zoom_factor=1.0
 
