--- a/dive/.godot/editor/script_editor_cache.cfg
+++ b/dive/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 57,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
+"row": 32,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -148,6 +148,20 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Items/background_fish.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
